--- a/views/layout_sin_cabecera.jade
+++ b/views/layout_sin_cabecera.jade
@@ -92,7 +92,7 @@ html
                               div.media-body.pull-left
                                 | #{locals.user.profile.username}
                                 span.caret
-                            ul.dropdown-menu(style="width: 100%; background: #E7E7E7")
+                            ul.dropdown-menu(style="width: 100%;")
                               li.dropdown
                                 a(href="/app/perfil#headingOne") Notificaciones
                                   span(style="float: right; margin-top: -20px;").badge.noti_up #{nuevas}
