--- a/views/nueva.jade
+++ b/views/nueva.jade
@@ -27,4 +27,4 @@ block script
 		map.addControl(new app.Draw());
 		map.addControl(new app.Lateral({titulo: 'Añadir nueva denuncia'}));
 		var random = '#{random}';
-		alert(random);
+		//alert(random);
